--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 >
             </li>
             <li>
-                <a href="https://my-shoes.com.github.io/shoes/"
+                <a href="https://my-shoes-dot-com.github.io/shoes/"
                     >Shoes website</a
                 >
             </li>
