--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                     >cards</a
                 >
             </li>
+            <li>
+                <a href="https://doctor-lionel.github.io/htmlAndCssAndJs/test/"
+                    >STS clone</a
+                >
+            </li>
         </ul>
     </body>
 </html>
