--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         <h1>Links to my various works</h1>
         <ul>
             <li>
-                <a
-                    https://doctor-lionel.github.io/oiloftropsasafum/test.html
+                <a href="https://doctor-lionel.github.io/oiloftropsasafum/test.html"
                     >My first website ever</a
                 >
             </li>
